--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -198,7 +198,7 @@ section.teaser {
   }
 }
 section:nth-of-type(2).teaser,
-section.nth-of_type(6).teaser {
+section:nth-of_type(6).teaser {
   border-bottom-color: $color_three;
 }
 section:nth-of-type(3).teaser,
