--- a/app/views/site_partials/navigation/_main_nav.html.erb
+++ b/app/views/site_partials/navigation/_main_nav.html.erb
@@ -1,4 +1,4 @@
-<div id="main_nav" class="row navbar" gumby-fixed="top">
+<div id="main_nav" class="row navbar">
     <a class="toggle" gumby-trigger="#main_nav > li" href="#"><i class="icon-menu"></i></a>
     <ul>
       <% if defined?(param_1) && param_1 %>
