--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -16,10 +16,10 @@
     - if (options = ::Cms::Layout.options_for_select(@site)).present?
       = metaform.select :layout_id, options, {}, 'data-url' => form_blocks_admin_cms_site_page_path(@site, @page.id.to_i)
 
-    - if (options = ::Cms::Page.options_for_select(@site, @page)).present?
+    - if (options = options_for_page_select(@site, @page)).present?
       = metaform.select :parent_id, options
 
-    - if (options = ::Cms::Page.options_for_select(@site, @page, nil, 0, false)).present?
+    - if (options = options_for_page_select(@site, @page, nil, 0, false)).present?
       = metaform.select :target_page_id, [["---- #{t('.select_target_page')} ----", nil]] + options
 
     #form-save.box
