adjust slideshow spacing in all contexts

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -328,7 +328,7 @@ header {
   }
 }
 
-section.slideshow.row,
+section.slideshow,
 section.slideshow header.row,
 section.teaser header.row,
 footer.row {
