added SMINT page menu generation and offset of fixed position

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -341,6 +341,7 @@ nav#page_nav {
   /* text-align: center; */
   padding-left: 7%;
   background-color: $color_three;
+  z-index: 1350;
   ul.anchors {
     float: none;
     vertical-align: middle;
