--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -335,31 +335,34 @@ header {
 }
 
 nav#page_nav {
+  $page_nav_z: 1350;
   width: 100%;
   max-width: none;
   float: left;
+  height: 0;
   /* text-align: center; */
-  padding-left: 7%;
-  background-color: $color_three;
-  z-index: 1350;
   ul.anchors {
-    float: none;
+    float: left;
     vertical-align: middle;
-    width: auto;
-    margin: 0 auto;
+    width: 100%;
+    padding: 0 7%;
+    background-color: $color_three;
     display: inline-block;
+    z-index: $page_nav_z;
     li {
       border-left: 1px solid #fff;
       padding: 0 0.45em 0.15em;
       margin: 0.75em 0;
       display: inline;
       float: left;
+      z-index: $page_nav_z;
     }
     li:first-child {
       border-left: 0;
     }
     li a {
       color: #fff;
+      z-index: $page_nav_z;
       text-decoration: none;
       display: block;
       line-height: 90%;
