--- a/app/views/admin/cms/pages/_form.html.haml
+++ b/app/views/admin/cms/pages/_form.html.haml
@@ -36,9 +36,10 @@
 = render :partial => 'form_blocks'
 
 - if request.xhr?
-  != javascript_tag do
+  :javascript
     CMS.wysiwyg();
     CMS.codemirror();
+    $('#cms-current-context span').text('#{escape_javascript(current_context_title(nil))}')
 
 = form.check_box :is_published, :label => t('.is_published')
 = data_copy_field_for :page, :slug
