max-height and scrolling for the fancytree lists, removed a spammy "error" message

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -79,6 +79,9 @@
 
 #content .left-column .tab-pane {
     min-height: 186px;
+    max-height: 620px;
+    padding-right: 18px;
+    overflow-y: scroll;
 }
 
 form.formatted
