--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -81,7 +81,7 @@
     min-height: 186px;
     max-height: 620px;
     padding-right: 18px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 form.formatted
