sane footer positioning

--- a/app/assets/sass/comfortable_mexican_sofa/base.css.sass
+++ b/app/assets/sass/comfortable_mexican_sofa/base.css.sass
@@ -175,13 +175,15 @@ body#coruscope
     background-size: 50px 50px
   
   // -- Sofa Version --------------------------------------------------------
-  .center-column .body-footer
+  .body-wrapper
+    position: relative
+  .body-wrapper .body-footer
     position: absolute
     background: $dark_2nd
     bottom: 0px
-    left: -50%
+    left: 0px
     z-index: 120
-    width: 50%
+    width: 31.9149%
     padding: 5px 10px
     font-size: 10px
     a
